--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
   <body>
     <div id="container">
       <div id="clock">
-        <span id="hour"></span><span id="colon">:</span
-        ><span id="minute"></span>
+        <span id="hour"></span>:<span id="minute"></span>
         <br />
       </div>
       <div id="date"></div>
