--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
   <body>
     <div id="container">
       <div id="clock">
-        <span id="hour"></span>:<span id="minute"></span>
+        <div>12:34</div>
+        <span id="hour">12</span>:<span id="minute">34</span>
         <br />
       </div>
-      <div id="date"></div>
+      <div id="date">1997년 3월 14일 금요일</div>
     </div>
     <button id="fullscreen-button">전체화면</button>
     <script src="main.js"></script>
