--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="favicon.ico" />
+    <title>tsclock</title>
   </head>
   <body>
     <div id="container">
       <div id="clock">
-        <span id="hour">12</span>:<span id="minute">34</span>
+        <div id="hour">12</div>
+        <div id="colon">:</div>
+        <div id="minute">34</div>
       </div>
       <div id="date">1997년 3월 14일 금요일</div>
     </div>
