--- a/index.html
+++ b/index.html
@@ -48,14 +48,20 @@
             @change="changeClockFontFamily(font)"
           />0123456789 12:34 {{font}}
         </label>
-        <label
-          >시계 크기<input
-            id="clock-font-size"
-            type="number"
-            v-model="clockFontSize"
-            @change="changeClockFontSize"
-            min="1"
-        /></label>
+        <div>
+          <label
+            >시계 크기<input
+              id="clock-font-size"
+              type="number"
+              v-model="clockFontSize"
+              @change="changeClockFontSize"
+              min="1" /></label
+          ><button @click="()=>{clockFontSize += 1;changeClockFontSize() }">
+            +</button
+          ><button @click="()=>{clockFontSize -= 1;changeClockFontSize() }">
+            -
+          </button>
+        </div>
         <label
           >콜론 위치<input
             id="clock-font-size"
@@ -81,15 +87,21 @@
             @change="changeDateFontFamily(font)"
           />0123456789 12:34 {{font}}
         </label>
-        <label
-          >날짜 크기<input
-            id="clock-font-size"
-            type="number"
-            v-model="dateFontSize"
-            @change="changeDateFontSize"
-            min="1"
-            step="0.1"
-        /></label>
+        <div>
+          <label
+            >날짜 크기<input
+              id="clock-font-size"
+              type="number"
+              v-model="dateFontSize.toFixed(1)"
+              @change="changeDateFontSize"
+              min="1"
+              step="0.1" /></label
+          ><button @click="()=>{dateFontSize += 0.1;changeDateFontSize() }">
+            +</button
+          ><button @click="()=>{dateFontSize -= 0.1;changeDateFontSize() }">
+            -
+          </button>
+        </div>
       </div>
     </div>
     <script src="js/vue@2.js"></script>
