--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div id="app">
       <div
-        id="container"
+        id="clock-container"
         :style="{fontFamily: clockFontFamily, fontSize: `${clockFontSize}vw`}"
       >
         <div id="clock" ref="clock">
@@ -19,6 +19,7 @@
             id="colon"
             :class="colonVisibility ? '' : 'transparent'"
             ref="colon"
+            :style="{transform: `translateY(${colonPosition}vw)`}"
           >
             :
           </div>
@@ -56,11 +57,8 @@
               v-model.number="clockFontSize"
               @change="changeClockFontSize"
               min="1" /></label
-          ><button @click="()=>{clockFontSize += 1;changeClockFontSize() }">
-            +</button
-          ><button @click="()=>{clockFontSize -= 1;changeClockFontSize() }">
-            -
-          </button>
+          ><button @click="changeClockFontSize(clockFontSize + 1) ">+</button
+          ><button @click="changeClockFontSize(clockFontSize - 1) ">-</button>
         </div>
         <div>
           <label
@@ -70,14 +68,12 @@
               v-model.number="colonPosition"
               @change="changeColonPosition"
               step="0.1" /></label
-          ><button @click="()=>{colonPosition += 0.1;changeColonPosition() }">
-            +</button
-          ><button @click="()=>{colonPosition -= 0.1;changeColonPosition() }">
-            -
-          </button>
+          ><button @click="changeColonPosition(colonPosition + 0.1)">+</button
+          ><button @click="changeColonPosition(colonPosition - 0.1) ">-</button>
         </div>
         <label>
-          <input type="checkbox" v-model="colonBlink" />콜론(:) 깜빡임
+          <input type="checkbox" v-model="colonBlink" @change="save" />콜론(:)
+          깜빡임
         </label>
         <hr />
 
@@ -102,11 +98,8 @@
               @change="changeDateFontSize"
               min="1"
               step="0.1" /></label
-          ><button @click="()=>{dateFontSize += 0.1;changeDateFontSize() }">
-            +</button
-          ><button @click="()=>{dateFontSize -= 0.1;changeDateFontSize() }">
-            -
-          </button>
+          ><button @click="changeDateFontSize(dateFontSize + 0.1)">+</button
+          ><button @click="changeDateFontSize(dateFontSize - 0.1)">-</button>
         </div>
       </div>
     </div>
